--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/images/location.png"  id="location" alt="location">
+                        <img src="images/location.png"  id="location" alt="location">
                     </a>
                 </li>
                 <li>
