--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                     <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">Explore</a>
+                    <a href="explore.html">Explore</a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="last.html">
                         <img src="images/location.png"  id="location" alt="location">
                     </a>
                 </li>
                 <li>
-                    <a href="#">Journal</a>
+                    <a href="journal.html">Journal</a>
                 </li>
                 <li>
                     
